Added the footer section

--- a/src/containers/SearchBar.scss
+++ b/src/containers/SearchBar.scss
@@ -13,10 +13,11 @@
 
     &::placeholder {
         color: #4b6a9b;
+        font-size: .8125rem;
     }
 
     img {
-        padding: 7px;
+        padding: 9px;
         max-width: 20px;
         max-height: 20px;
     }
