Added the user description section

--- a/src/containers/UserDetails.scss
+++ b/src/containers/UserDetails.scss
@@ -37,6 +37,12 @@
         }
     }
 
+    .user-description {
+        margin: 17px 0;
+        font-size: .8125rem;
+        line-height: 25px;
+    }
+
 
     .user-stats {
         margin-top: 18px;
