--- a/src/containers/UserDetails.scss
+++ b/src/containers/UserDetails.scss
@@ -64,4 +64,10 @@
             color: #000;
         }
     }
+
+    .user-contacts {
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
+    }
 }
