--- a/src/containers/Sass/Header.scss
+++ b/src/containers/Sass/Header.scss
@@ -21,6 +21,10 @@
         color: inherit;
         font-size: .8125rem;
 
+        &--txt {
+            text-transform: uppercase;
+        }
+
 
         img {
             padding-left: 1rem;
