--- a/src/components/Sass/UserContacts.scss
+++ b/src/components/Sass/UserContacts.scss
@@ -17,3 +17,20 @@
         }
     }
 }
+
+@media screen and (min-width: 641px) and (max-width: 1023px){
+    .user-contacts {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+
+        .twitter-icon {
+            grid-column: 2 / 3;
+            grid-row: 1 / 2;
+        }
+
+        .website-icon {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+        }
+    }
+}
