--- a/src/components/Sass/UserStats.scss
+++ b/src/components/Sass/UserStats.scss
@@ -18,3 +18,10 @@
         color: #000;
     }
 }
+
+
+@media screen and (min-width: 641px) and (max-width: 1023px) {
+    .user-stats {
+        text-align: left;
+    }
+}
