--- a/src/containers/Sass/App.scss
+++ b/src/containers/Sass/App.scss
@@ -1,5 +1,11 @@
 .App {
   padding: 30px 24px;
-  background-color: #F6F8FF;
   color: #4B6A9B;
+}
+
+
+@media screen and (min-width: 641px) and (max-width: 1023px){
+  .App {
+    max-width: 568px;
+  }
 }
