--- a/src/containers/Sass/UserDetails.scss
+++ b/src/containers/Sass/UserDetails.scss
@@ -5,3 +5,9 @@
     border-radius: 11px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)); 
 }
+
+@media screen and (min-width: 641px) and (max-width: 1023px)  {
+    .user-details {
+        margin-top: 12px;
+    }
+}
