--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,10 @@ body {
   padding: 0;
   font-family: 'Space mono', monospace;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  background-color: #F6F8FF;
+
 }
 
 h1, 
