--- a/src/components/Sass/UserContacts.scss
+++ b/src/components/Sass/UserContacts.scss
@@ -34,3 +34,21 @@
         }
     }
 }
+
+@media screen and (min-width: 1024px) {
+    .user-contacts {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column: 2 / 3;
+
+        .twitter-icon {
+            grid-column: 2 / 3;
+            grid-row: 1 / 2;
+        }
+
+        .website-icon {
+            grid-column: 1 / 2;
+            grid-row: 2 / 3;
+        }
+    }
+}
