--- a/src/components/Sass/UserStats.scss
+++ b/src/components/Sass/UserStats.scss
@@ -25,3 +25,13 @@
         text-align: left;
     }
 }
+
+@media screen and (min-width: 1024px) {
+    .user-stats {
+        grid-column: 2 / 3;
+        padding: 15px 0 17px 32px;
+        text-align: left;
+        margin-top: 0;
+        max-width: 480px;
+    }
+}
