--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,9 @@ body {
   box-sizing: border-box;
   display: flex;
   justify-content: center;
+  align-items: center;
   background-color: #F6F8FF;
+  height: 100vh;
 
 }
 
