--- a/src/containers/Sass/Header.scss
+++ b/src/containers/Sass/Header.scss
@@ -20,6 +20,7 @@
         font-weight: 700;
         color: inherit;
         font-size: .8125rem;
+        cursor: pointer;
 
         &--txt {
             text-transform: uppercase;
