--- a/src/containers/Sass/SearchBar.scss
+++ b/src/containers/Sass/SearchBar.scss
@@ -6,6 +6,7 @@
     background-color: #fff;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, .25));
     border-radius: 11px;
+    transition: all .3s ease-in-out;
 
     [type=text] {
         padding: 0;
@@ -19,6 +20,16 @@
     img {
         padding: 9px;
         max-width: 24px;
+    }
+
+    &__dark, &__dark > input {
+        background-color: #1E2A47;
+        color: #fff;
+        
+    }
+
+    & > input {
+        transition: all .3s ease-in-out;
     }
 }
 
