--- a/src/components/Sass/UserContacts.scss
+++ b/src/components/Sass/UserContacts.scss
@@ -4,10 +4,15 @@
     list-style-type: none;
     padding-top: 8px;
 
+    & > .not-available {
+        opacity: .2;
+    }
+
     li {
         display: flex;
         align-items: center;
         padding: 8px 0;
+
         img {
             width: .8125rem;
         }
@@ -17,6 +22,8 @@
             margin-left: 19px;
         }
     }
+
+    
 }
 
 @media screen and (min-width: 641px) and (max-width: 1023px){
@@ -27,11 +34,14 @@
         .twitter-icon {
             grid-column: 2 / 3;
             grid-row: 1 / 2;
+
+            
         }
 
         .website-icon {
             grid-column: 1 / 2;
             grid-row: 2 / 3;
+            margin-right: 50px;
         }
     }
 }
