--- a/src/containers/Sass/UserDetails.scss
+++ b/src/containers/Sass/UserDetails.scss
@@ -13,6 +13,11 @@
             color: #fff;
         } 
     }
+
+    .no-profile {
+        grid-column: 1 / 4;
+        text-align: center;
+    }
 }
 
 @media screen and (min-width: 641px) and (max-width: 1023px)  {
